--- a/train_configs/test_canny_controlnet.yaml
+++ b/train_configs/test_canny_controlnet.yaml
@@ -1,12 +1,15 @@
 model_name: "flux-dev"
 data_config:
-  train_batch_size: 4
   num_workers: 4
   img_size: 512
-  img_dir: images/
-report_to: wandb
-train_batch_size: 3
-output_dir: saves_canny/
+  img_dir: top_478k_no_crop_no_sketch_021223
+  #img_dir: mj_3.1k_jpg
+  image_column: "image"
+  caption_column: "text"
+
+report_to: tensorboard
+train_batch_size: 4
+output_dir: ckpt_sketch/
 max_train_steps: 100000
 learning_rate: 2e-5
 lr_scheduler: constant
@@ -18,8 +21,8 @@ adam_epsilon: 1e-8
 max_grad_norm: 1.0
 logging_dir: logs
 mixed_precision: "bf16"
-checkpointing_steps: 2500
+checkpointing_steps: 1000
 checkpoints_total_limit: 10
-tracker_project_name: canny_training
+tracker_project_name: sketch
 resume_from_checkpoint: latest
 gradient_accumulation_steps: 2
